# Lexical-Analyzer

./: CMakeLists.txt  Lexer.cpp  Lexer.h  main.cpp
src/: Lexer.cpp  Lexer.h  main.cpp
tests/: output1.txt  output2.txt  output3.txt  test1.rat25f  test2.rat25f  test3.rat25f
